fix spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,7 @@
         margin: 10px; 
         mat-drawer {
             max-width: 25%;
+            width: 25%;
         }
     }
 }
